fixed coaches visibility issue on tablets

--- a/frontend/src/styles/reset.scss
+++ b/frontend/src/styles/reset.scss
@@ -105,7 +105,7 @@ html {
   border-radius: 100vw;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
   [data-aos] {
     pointer-events: auto !important;
   }
